--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; 
-  min-height: 100vh;
+  min-height: 80vh;
   margin: 0; 
   padding: 0px;
-  gap: 60px;
+  gap: 40px;
 }
 
 .gallery {
@@ -97,4 +97,127 @@ body {
 
 h1, h2 {
   color: #333;
+}
+
+
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px ;
+  background-color: #f9f9f9;
+  top: 0;
+  z-index: 1000;
+}
+
+.navbar .logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #D6526D;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links li {
+  font-size: 1rem;
+}
+
+.nav-links a {
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.nav-links a:hover {
+  color: #D6526D;
+}
+
+/* Smooth scrolling for anchor links */
+html {
+  scroll-behavior: smooth;
+}
+.experience-section {
+  padding: 50px 20px;
+  background-color: #f9f9f9;
+  color: #333;
+  text-align: center;
+}
+
+.experience-section h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.experience-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.experience-card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.experience-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.experience-card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.experience-card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 5 px;
+}
+
+.experience-card h4 {
+  font-size: 1.2rem;
+  color: #777;
+  margin-bottom: 3 px;
+}
+
+.experience-card h5 {
+  font-size: 13px;
+  color: #444;
+  margin-bottom: 5 px;
+}
+
+.experience-card p {
+  font-size: 1rem;
+  margin: 0 px;
+}
+
+.details-button {
+  align-items: center;
+  color: white;
+  border: 1px;
+  border-color: #282c34;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.details-button:hover {
+  background-color: #D6526D;
 }
