--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,12 @@ h1, h2 {
   color: #D6526D;
 }
 
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
 /* Smooth scrolling for anchor links */
 html {
   scroll-behavior: smooth;
@@ -229,4 +235,94 @@ html {
 .footer {
   text-align: center;
   padding: 10px 0px ;
+}
+
+
+/* Mobile Styles for small screens (up to 768px) */
+@media (max-width: 768px) {
+  .App-header {
+    font-size: calc(8px + 2vmin);
+    padding: 10px;
+  }
+
+  .intro {
+    flex: 1;
+    text-align: center;
+    padding: 0;
+    margin: 0; 
+  }
+
+  .nav-links {
+    display: none; 
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    padding: 10px 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-links.show {
+    display: flex;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .home-gallery {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .gallery .grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gallery img {
+    width: 100%;
+    height: auto;
+    max-width: 350px; 
+    object-fit: cover;
+  }
+
+  .gallery img:not(:first-child) {
+    display: none;
+  }
+
+  .experience-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .experience-card {
+    padding: 15px;
+  }
+
+  .details-button {
+    width: 100%;
+  }
+}
+
+/* Extra Small Devices (up to 480px) */
+@media (max-width: 480px) {
+  .App-logo {
+    height: 30vmin;
+  }
+
+  .experience-card img {
+    height: 100px;
+  }
+
+  .navbar .logo {
+    font-size: 1.2rem;
+  }
+
+  h1, h2 {
+    font-size: 1.5rem;
+  }
 }
